--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
     font-family: Arial;
     padding: 20px;
-    background: #f1f1f1;
+    background: rgb(248, 244, 204);
   }
   
-  /* Header/Blog Title */
+  /* Header/Title */
   .header {
     padding: 25px;
     font-size: 18px;
     text-align: center;
-    background: rgb(175, 175, 175);
+    background: rgb(158, 157, 157);
   }
   li {
     border: 10px;
@@ -18,16 +18,17 @@ body {
 }
 a {
     background-color: rgb(139, 172, 202);
-    color: white;
+    color: rgb(248, 244, 204);
     padding: 1em 1.5em;
     text-decoration: none;
     text-transform: uppercase;
   }
-  /* Create two unequal columns that floats next to each other */
+  /* Creating two unequal columns for desired affect */
   /* Left column */
   .leftcolumn { 
     float: left;
     width: 60%;
+    
   }
   
   /* Right column */
@@ -36,18 +37,19 @@ a {
     width: 25%;
     padding-left: 10px;
     display: center;
+    
   }
   
-  /* Fake image */
+  /* images */
   .img {
-    background-color: #aaa;
-    width: 46%;
+    background-color: rgb(158, 157, 157);
+    width: 75%;
     padding: 20px;
   }
   
   /* Add a card effect for articles */
   .card {
-    background-color: white;
+    background-color: rgb(158, 157, 157);
     padding: 20px;
     margin-top: 20px;
   }
